# GrantPrit

./: .gitignore  CMakeLists.txt  input.txt
Update2Work/: CMakeLists.txt  utf8_validation_kernel.cpp  utf8_validation_kernel.h  utf8validate.cpp
Update2Work/testdata/: valid_ascii.txt  valid_large.txt  valid_multilingual.txt
tools/utf8-study/: CMakeLists.txt  utf8_classify.cpp
tools/util/: hexlines.cpp
